added images folder and fixed image name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style="max-width: 600px; margin: auto;" @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {}
     }>
     <div>
-        <img src="images/THE STARTING LINE (1).jpg" alt="The Starting Line title with image of runner">
+        <img src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
     </div>
     <div>
         <table>
