fix white space in table

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
     </div>
     <div>
-        <table>
+        <table style="border-collapse: collapse;">
             <tr>
                 <th style="background-color: #C43503; padding: 0;"><img src="images/running-shoe-with-sensor-th.png"></th>
                 <th style="background-color: #C43503; padding: 0;"><img src="images/drink.png"></th>
@@ -31,7 +31,7 @@
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
                 <td>1234 Fast St.</td> 
-        </tr>
+            </tr>
             <tr>
                 <td>Any City, PA 56789</td>
             </tr>   
