--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <td style="text-align: center; font-size: 28px; padding-top: 15px; padding-bottom: 15px; border-left: 2px solid #C43503;"><Strong>Race</Strong></td>
             </tr>
             <tr style="font-size: 18px; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;">
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/">Learn more</a> about choosing the right running shoe for you!</td>
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547">this guide.</a></td> 
-                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/">here</a> for one of our favorites!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/">Learn more</a> about choosing the right running shoe for you!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547">this guide.</a></td> 
+                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/">here</a> for one of our favorites!</td>
             </tr>
         </table>
     </div>
