--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body style="max-width: 600px; margin: auto;" @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {}
     }>
     <div>
-        <img src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
+        <img style="display:block;" src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
     </div>
     <div>
         <table style="border-collapse: collapse;">
             <tr>
                 <th style="background-color: #C43503; padding: 0;"><img src="images/running-shoe-with-sensor-th.png"></th>
-                <th style="background-color: #C43503; padding: 0;"><img src="images/drink.png"></th>
-                <th style="background-color: #C43503; padding: 0;"><img src="images/medals.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/drink.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/medals.png"></th>
             </tr>
             <tr>
                 <td style="text-align: center; font-size: 28px; padding-top: 15px; padding-bottom: 15px; border-right: 2px solid #C43503;"><strong>Gear</strong></td>
