--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
 <title>The Starting Line</title>
 </head>
+    <!--add media query for mobile phones-->
 <body style="max-width: 600px; margin: auto;" @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {}
     }>
     <div>
+     <!--header image created in Canva-->
         <img style="display:block;" src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
     </div>
     <div>
+     <!--collapse borders so cells share one border-->
         <table style="border-collapse: collapse;">
             <tr>
+            <!--section icons-->
                 <th style="background-color: #C43503; padding: 0;"><img src="images/running-shoe-with-sensor-th.png"></th>
                 <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/drink.png"></th>
                 <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/medals.png"></th>
             </tr>
             <tr>
+            <!--section headings-->
                 <td style="text-align: center; font-size: 28px; padding-top: 15px; padding-bottom: 15px; border-right: 2px solid #C43503;"><strong>Gear</strong></td>
                 <td style="text-align: center; font-size: 28px; padding-top: 15px; padding-bottom: 15px; border-right: 2px solid #C43503; border-left: 2px solid #C43503;"><strong>Fuel</strong></td>
                 <td style="text-align: center; font-size: 28px; padding-top: 15px; padding-bottom: 15px; border-left: 2px solid #C43503;"><Strong>Race</Strong></td>
             </tr>
             <tr style="font-size: 18px; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;">
+            <!--section descriptions and content-->
                 <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/">Learn more</a> about choosing the right running shoe for you!</td>
                 <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547">this guide.</a></td> 
                 <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/">here</a> for one of our favorites!</td>
@@ -28,6 +34,7 @@
         </table>
     </div>
     <div style="background-color: lightgray";>
+        <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
                 <td>1234 Fast St.</td> 
