Added social media icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
 <title>The Starting Line</title>
 </head>
     <!--add media query for mobile phones-->
@@ -44,6 +45,9 @@
             </tr>   
             <tr>
                 <td>contact@startingline.com</td>
+            </tr>
+            <tr>
+                <td><img src="images/facebook_circle-512.png">  <img src="images/instagram-Logo.png">  <img src="images/Twitter.png"></td>
             </tr>
             <tr> 
                 <td><em><u>Click here to unsubscribe.</u></em></td>
