added whiute border between icons, added padding to top of footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <table style="border-collapse: collapse;">
             <tr>
             <!--section icons-->
-                <th style="background-color: #C43503; padding: 0;"><img src="images/running-shoe-with-sensor-th.png"></th>
-                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/drink.png"></th>
-                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/medals.png"></th>
+                <th style="background-color: #C43503; padding: 0; border-right: 2px solid #FFFFFF;"><img src="images/running-shoe-with-sensor-th.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px;border-right: 2px solid #FFFFFF; border-left: 2px solid #FFFFFF;"><img src="images/drink.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px; border-left: 2px solid #FFFFFF;"><img src="images/medals.png"></th>
             </tr>
             <tr>
             <!--section headings-->
@@ -38,7 +38,7 @@
         <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
-                <td>1234 Fast St.</td> 
+                <td style="padding-top: 10px;">1234 Fast St.</td> 
             </tr>
             <tr>
                 <td>Any City, PA 56789</td>
@@ -50,7 +50,7 @@
                 <td><img src="images/facebook_circle-512.png">  <img src="images/instagram-Logo.png">  <img src="images/Twitter.png"></td>
             </tr>
             <tr> 
-                <td><em><u>Click here to unsubscribe.</u></em></td>
+                <td><em><u><a href=#>Click here to unsubscribe.</a></u></em></td>
             </tr>
         </table>
     </div>
