--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </tr>
             <tr style="font-size: 18px; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;">
             <!--section descriptions and content-->
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/">Learn more</a> about choosing the right running shoe for you!</td>
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547">this guide.</a></td> 
-                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/">here</a> for one of our favorites!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/" target="_blank">Learn more</a> about choosing the right running shoe for you!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547" target="_blank">this guide.</a></td> 
+                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/" target="_blank">here</a> for one of our favorites!</td>
             </tr>
         </table>
     </div>
