Added footer background image

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name = "viewport" content="width=device-width, initial-scale=1">
 <title>The Starting Line</title>
 </head>
     <!--add media query for mobile phones-->
 <body style="max-width: 600px; margin: auto;" @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {}
-    }>
+    >
     <div>
      <!--header image created in Canva-->
         <img style="display:block;" src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
@@ -16,9 +15,9 @@
         <table style="border-collapse: collapse;">
             <tr>
             <!--section icons-->
-                <th style="background-color: #C43503; padding: 0;"><img src="images/running-shoe-with-sensor-th.png"></th>
-                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/drink.png"></th>
-                <th style="background-color: #C43503; padding: 0; padding-top: 5px;"><img src="images/medals.png"></th>
+                <th style="background-color: #C43503; padding: 0; border-right: 2px solid #FFFFFF;"><img src="images/running-shoe-with-sensor-th.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px;border-right: 2px solid #FFFFFF; border-left: 2px solid #FFFFFF;"><img src="images/drink.png"></th>
+                <th style="background-color: #C43503; padding: 0; padding-top: 5px; border-left: 2px solid #FFFFFF;"><img src="images/medals.png"></th>
             </tr>
             <tr>
             <!--section headings-->
@@ -28,29 +27,29 @@
             </tr>
             <tr style="font-size: 18px; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;">
             <!--section descriptions and content-->
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/">Learn more</a> about choosing the right running shoe for you!</td>
-                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547">this guide.</a></td> 
-                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/">here</a> for one of our favorites!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; width: 200px; vertical-align:text-top;">The right running shoe is key to a pain-free, enjoyable running experience. <a href="https://www.runnersworld.com/gear/a20842305/how-to-buy-the-right-running-shoes/" target="_blank">Learn more</a> about choosing the right running shoe for you!</td>
+                <td style="border-right: 2px solid #C43503; padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Much like a car, you can't run on an empty tank. Give your body the fuel it needs before and after a run by following <a href="https://www.verywellfit.com/should-i-eat-before-a-run-2911547" target="_blank">this guide.</a></td> 
+                <td style="padding-right: 20px; padding-left: 20px; border-left: 2px solid #C43503; width: 200px; vertical-align:text-top;">Looking for a race in your area? Many sites allow you to search by location and type of race. Click <a href="https://runsignup.com/" target="_blank">here</a> for one of our favorites!</td>
             </tr>
         </table>
     </div>
-    <div style="background-color: lightgray";>
+    <div style="background-color: lightgray; background-image: url('Road.png')">
         <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
-                <td>1234 Fast St.</td> 
+                <td style="padding-top: 10px;"><strong>1234 Fast St.</strong></td> 
             </tr>
             <tr>
-                <td>Any City, PA 56789</td>
+                <td><strong>Any City, PA 56789</strong></td>
             </tr>   
             <tr>
-                <td>contact@startingline.com</td>
+                <td><strong>contact@startingline.com</strong></td>
             </tr>
             <tr>
                 <td><img src="images/facebook_circle-512.png">  <img src="images/instagram-Logo.png">  <img src="images/Twitter.png"></td>
             </tr>
             <tr> 
-                <td><em><u>Click here to unsubscribe.</u></em></td>
+                <td><em><strong><u><a href=#>Click here to unsubscribe.</a></u></em></strong></td>
             </tr>
         </table>
     </div>
