added footer backgroung image

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name = "viewport" content="width=device-width, initial-scale=1">
 <title>The Starting Line</title>
 </head>
     <!--add media query for mobile phones-->
 <body style="max-width: 600px; margin: auto;" @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {}
-    }>
+    >
     <div>
      <!--header image created in Canva-->
         <img style="display:block;" src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
@@ -34,23 +33,23 @@
             </tr>
         </table>
     </div>
-    <div style="background-color: lightgray";>
+    <div style="background-color: lightgray; background-image: url('Road.png')">
         <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
-                <td style="padding-top: 10px;">1234 Fast St.</td> 
+                <td style="padding-top: 10px;"><strong>1234 Fast St.</strong></td> 
             </tr>
             <tr>
-                <td>Any City, PA 56789</td>
+                <td><strong>Any City, PA 56789</strong></td>
             </tr>   
             <tr>
-                <td>contact@startingline.com</td>
+                <td><strong>contact@startingline.com</strong></td>
             </tr>
             <tr>
                 <td><img src="images/facebook_circle-512.png">  <img src="images/instagram-Logo.png">  <img src="images/Twitter.png"></td>
             </tr>
             <tr> 
-                <td><em><u><a href=#>Click here to unsubscribe.</a></u></em></td>
+                <td><em><strong><u><a href=#>Click here to unsubscribe.</a></u></em></strong></td>
             </tr>
         </table>
     </div>
