replaced social media icons, added space between them

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img style="display:block;" src="images/the-starting-line.jpg" alt="The Starting Line title with image of runner">
     </div>
     <div>
-     <!--collapse borders so cells share one border-->
+     <!--eliminates table grid-->
         <table style="border-collapse: collapse;">
             <tr>
             <!--section icons-->
@@ -33,7 +33,7 @@
             </tr>
         </table>
     </div>
-    <div style="background-color: lightgray; background-image: url('Road.png')">
+    <div style="background-color: lightgray; background-image: url('/images/Road.png')">
         <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
@@ -43,13 +43,13 @@
                 <td><strong>Any City, PA 56789</strong></td>
             </tr>   
             <tr>
-                <td><strong>contact@startingline.com</strong></td>
+                <td><strong><a href="mailto:#">contact@startingline.com</a></strong></td>
             </tr>
             <tr>
-                <td><img src="images/facebook_circle-512.png">  <img src="images/instagram-Logo.png">  <img src="images/Twitter.png"></td>
+                <td><img src="images/facebook-logo.png" alt ="facebook icon" height= "30px" width="30px"style="margin-right: 10px;">  <img src="images/instagram-icon.png" alt="instagram icon" height= "30px" width="30px" style="margin-right: 10px;">  <img src="images/twitter-logo.png" alt="twitter icon" height= "30px" width="30px"></td>
             </tr>
             <tr> 
-                <td><em><strong><u><a href=#>Click here to unsubscribe.</a></u></em></strong></td>
+                <td style="padding-bottom: 10px;"><em><strong><u><a href=#>Click here to unsubscribe.</a></u></em></strong></td>
             </tr>
         </table>
     </div>
