--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
     </div>
-    <div style="background-color: lightgray; background-image: url('/images/Road.png')">
+    <div style="background-color: lightgray; background-image: url('images/Road.png')">
         <!--footer table with contact info-->
         <table style="margin-top: 20px; width: 600px; text-align: center;">
             <tr> 
