added links to social pages

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
             </tr>
             <tr>
                 <td><strong>Any City, PA 56789</strong></td>
-            </tr>   
+            </tr> 
+            <!--mailto opens an email with nothing in the "to" field-->  
             <tr>
                 <td><strong><a href="mailto:#">contact@startingline.com</a></strong></td>
             </tr>
+            <!--Links go to generic homepage-->
             <tr>
-                <td><img src="images/facebook-logo.png" alt ="facebook icon" height= "30px" width="30px"style="margin-right: 10px;">  <img src="images/instagram-icon.png" alt="instagram icon" height= "30px" width="30px" style="margin-right: 10px;">  <img src="images/twitter-logo.png" alt="twitter icon" height= "30px" width="30px"></td>
+                <td><a href="https://www.facebook.com" target="_blank">
+                    <img src="images/facebook-logo.png" alt ="facebook icon" height= "30px" width="30px"style="margin-right: 5px;"></a>  <a href="https://www.instagram.com" target="_blank"><img src="images/instagram-icon.png" alt="instagram icon" height= "30px" width="30px" style="margin-right: 5px;"></a>  <a href="https://www.twitter.com" target="_blank"><img src="images/twitter-logo.png" alt="twitter icon" height= "30px" width="30px"></a></td>
             </tr>
             <tr> 
                 <td style="padding-bottom: 10px;"><em><strong><u><a href=#>Click here to unsubscribe.</a></u></em></strong></td>
